<resources>
    <string name="app_name">Chattiong</string>
    <string name="news">新闻</string>
    <string name="note">笔记</string>
    <string name="myself">自己</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="edit">编辑 :</string>
    <string name="map">地图</string>
    <string name="detail">详情...</string>
    <string name="content">内容</string>
    <string name="mynote">我的日记</string>
    <string name="my_news">收藏的新闻</string>
    <string name="set_out">登出</string>
    <string name="save">保存</string>
    <string name="note_own">署名</string>
    <string name="next">下一页</string>
    <string name="reset">reset</string>
    <string name="stacklayoutmanager">com.example.administrator.chattiong.LayoutManager.StackLayoutManager</string>
</resources>
