<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.administrator.chattiong.Fragment.MyselfFragment"
    >

    <data>

        <variable
            name="User"
            type="com.example.administrator.chattiong.Bean.User"/>

    </data>

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

        <!-- TODO: Update blank fragment layout -->

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="270dp"
            android:background="@drawable/my_color"
            android:orientation="vertical"
            >

            <com.example.administrator.chattiong.Util.CircleImageView
                android:id="@+id/recycleListView"
                android:layout_width="96dp"
                android:layout_height="96dp"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="55dp"
                android:src="@mipmap/icon"/>

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/recycleListView"
                android:layout_marginTop="37dp"
                android:gravity="center"
                android:text="@{User.getUsrname}"/>

        </RelativeLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:orientation="vertical">


            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="5dp"
                android:src="@mipmap/mynews"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="25dp"
                android:layout_marginStart="25dp"
                android:layout_toEndOf="@+id/imageView2"
                android:layout_toRightOf="@+id/imageView2"
                android:text="@string/my_news"
                android:textSize="18dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="1dip"
                android:layout_alignParentBottom="true"
                android:layout_alignParentEnd="true"
                android:layout_marginLeft="60dp"
                android:layout_alignParentRight="true"
                android:background="#c9c9c9"/>
        </RelativeLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:orientation="vertical"
            android:onClick="@{User.WriteNote}">


            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="5dp"
                android:src="@mipmap/dailnote"
                android:id="@+id/imageView3"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mynote"
                android:textSize="18dp"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@+id/imageView3"
                android:layout_toEndOf="@+id/imageView3"
                android:layout_marginLeft="25dp"
                android:layout_marginStart="25dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="1dip"
                android:layout_alignParentBottom="true"
                android:layout_alignParentEnd="true"
                android:layout_marginLeft="60dp"
                android:layout_alignParentRight="true"
                android:background="#c9c9c9"/>
        </RelativeLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:orientation="vertical"
            android:onClick="@{User.GetOut}"
            >


            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="5dp"
                android:src="@mipmap/get_out"
                android:id="@+id/imageView4"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/set_out"
                android:textSize="18dp"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@+id/imageView4"
                android:layout_toEndOf="@+id/imageView4"
                android:layout_marginLeft="25dp"
                android:layout_marginStart="25dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="1dip"
                android:layout_alignParentBottom="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:background="#c9c9c9"/>
        </RelativeLayout>


    </LinearLayout>
</layout>